--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <td><!--Seccion-->
       <div>
         <h2>¿Qué es HTML?</h2>
-        <img src="imagenes/HTML5_Logo.png" width="80px" height="80px">
+        <img src="imagenes/HTML5_LOGO.png" width="80px" height="80px">
         <p>Es un lenguaje que se utiliza para la creación de páginas en la WWW</p>
       </div>
     </td>
